# sysmlv2-ai-experiments

./: .env.example  .gitignore  README.md  ai_experiment.ipynb  docker-compose.yml  funcs.py  ptc-25-04-31.sysml  pyproject.toml  start.sh
sysmlv2_api/: Dockerfile  entrypoint.sh
sysmlv2_jupyter_env/: Dockerfile
